<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="3dp"
    android:background="@drawable/border"
    android:paddingBottom="5dp"
    android:stretchColumns="0,1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:background="#FFFFFF"
        android:backgroundTint="@color/green">

        <TextView
            android:id="@+id/leaveDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/StartToEndText"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/spacing"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/leaveDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingEnd="20dp"
            android:text="@string/AMLeaveShiftText"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/leaveType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/leaveType"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </TableRow>
</TableLayout>
