<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">


                //Date of purchase
                <TextView
                    android:id="@+id/textViewDop_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="20sp"
                    android:text="@string/cddate_of_purchase"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/textViewDoP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="25dp"
                    android:paddingLeft="10dp"
                    android:textSize="18sp"
                    android:text="asdfasd"
                    android:layout_below="@id/textViewDop_L"
                    android:layout_alignParentLeft="true"
                    android:textStyle="bold|italic"/>

                //Status

                <TextView
                    android:id="@+id/textViewStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/orange_pending"
                    android:text="Pending"
                    android:textColor="@color/white"/>

                //Category
                <TextView
                    android:id="@+id/textViewCategory_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="20sp"
                    android:text="@string/cmcategory"
                    android:layout_below="@id/textViewDoP"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/textViewCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="25dp"
                    android:paddingLeft="10dp"
                    android:textSize="18sp"
                    android:text="asdfasd"
                    android:layout_below="@id/textViewCategory_L"
                    android:layout_alignParentLeft="true"
                    android:textStyle="bold|italic"/>

                //Amount
                <TextView
                    android:id="@+id/textViewAmount_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="20sp"
                    android:text="@string/cdamount"
                    android:layout_below="@id/textViewCategory"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/textViewAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="25dp"
                    android:paddingLeft="10dp"
                    android:textSize="18sp"
                    android:text="asdfasd"
                    android:layout_below="@id/textViewAmount_L"
                    android:layout_alignParentLeft="true"
                    android:textStyle="bold|italic"/>

                //Receipt Number
                <TextView
                    android:id="@+id/textViewReceiptNumber_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="20sp"
                    android:text="@string/receipt_number"
                    android:layout_below="@id/textViewAmount"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/textViewReceiptNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="25dp"
                    android:paddingLeft="10dp"
                    android:textSize="18sp"
                    android:text="asdfasd"
                    android:layout_below="@id/textViewReceiptNumber_L"
                    android:layout_alignParentLeft="true"
                    android:textStyle="bold|italic"/>

                //Remarks
                <TextView
                    android:id="@+id/textViewRemarks_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="20sp"
                    android:text="@string/cdremarks"
                    android:layout_below="@id/textViewReceiptNumber"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/textViewRemarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="25dp"
                    android:paddingLeft="10dp"
                    android:textSize="18sp"
                    android:text="asdfasd"
                    android:layout_below="@id/textViewRemarks_L"
                    android:layout_alignParentLeft="true"
                    android:textStyle="bold|italic"/>

                //Uploaded File
                <TextView
                    android:id="@+id/textViewUploadedFile_L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="20sp"
                    android:text="@string/uploaded_file"
                    android:layout_below="@id/textViewRemarks"
                    android:layout_alignParentLeft="true"/>

                <ImageView
                    android:id="@+id/imageViewUploadedFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:layout_below="@id/textViewUploadedFile_L"
                    android:layout_alignParentLeft="true"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />




        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>